syntax = "proto3";

package envoy.extensions.filters.http.alternate_protocols_cache.v3;

import "envoy/config/core/v3/protocol.proto";

import "envoy/annotations/deprecation.proto";
import "udpa/annotations/status.proto";

option java_package = "io.envoyproxy.envoy.extensions.filters.http.alternate_protocols_cache.v3";
option java_outer_classname = "AlternateProtocolsCacheProto";
option java_multiple_files = true;
option go_package = "github.com/envoyproxy/go-control-plane/envoy/extensions/filters/http/alternate_protocols_cache/v3;alternate_protocols_cachev3";
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: Alternate Protocols Cache]

// Configuration for the alternate protocols cache HTTP filter.
// [#extension: envoy.filters.http.alternate_protocols_cache]
message FilterConfig {
  // This field is ignored: the alternate protocols cache filter will use the
  // cache for the cluster the request is routed to.
  config.core.v3.AlternateProtocolsCacheOptions alternate_protocols_cache_options = 1
      [deprecated = true, (envoy.annotations.deprecated_at_minor_version) = "3.0"];
}
